# chatvisor

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  start_api_server.py  start_telegram_bot.py
app/: chatbot.py  commands.py  config.py  llms.py
app/ai/: chatbot.py  llms.py
app/api/: app.py
app/core/: config.py
app/db/: __init__.py  custom_fields.py  enums.py  models.py
app/tg/: __init__.py  commands.py  main.py  utils.py
app/utils/: ai.py  basic.py  user.py
app_api/: app.py
app_telegram/: __init__.py  commands.py  main.py
app_telegram/commands/: __init__.py  llm.py  main.py
app_telegram/handlers/: __init__.py  error.py  general.py
app_telegram/handlers/image/: __init__.py
app_telegram/handlers/llm/: __init__.py  base.py
config/: main.py
core/: database.py  logging.py
core/ai/: base.py  chatbot.py  llms.py  main.py
core/config/: __init__.py  main.py
core/config/submodels/: main.py
core/crud/: user.py
core/entities/enums/: __init__.py  base.py
core/entities/models/: __init__.py  base.py  main.py
core/entities/schemas/: __init__.py  telegram.py
core/entities/schemas/stripe/: base.py  customer.py  customer_subscription.py  invoice.py
core/extensions/: log_formatter.py
core/user/: checkout.py  main.py  plan.py  subscription.py
entities/config_schemas/: main.py
entities/enums/: __init__.py  base.py  main.py
entities/models/: __init__.py  base.py  main.py
entities/schemas/: __init__.py  telegram.py
entities/schemas/stripe/: base.py  checkout.py  customer.py  customer_subscription.py  invoice.py
migrations/: env.py  script.py.mako
migrations/versions/: 1e06f9db6a2d_initial_migration.py  313aa6e840e1_initial_migration.py  3da13253472d_.py  41e6c9aa8c86_add_customer_customersubscription.py  50622be69548_feat_add_data_column_to_userchannel.py  542ebdb351f0_add_created_at_to_messages.py  a6f73c2bf9e3_prompt_output_tables_update.py  cd9e728914e4_initial_migration.py
utils/: notification.py  telegram.py
utils/ai/: base.py  constants.py  main.py
utils/user/: base.py  checkout.py  main.py  plan.py  subscription.py
