[tool.poetry]
name = "smartbot"
version = "0.1.0"
description = "Smart Bot with lots of abilities."
authors = ["Hikmat Samadov <s3m3dov@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# Miscaleanous
python-dotenv = "^1.0.0"
requests = "^2.30.0"
pendulum = "^2.1.2"

# API Development
fastapi = "^0.95.2"
uvicorn = "^0.22.0"

# Data Validation & Serialization
pydantic = "^1.10.8"

# Database
pgvector = "^0.1.8"
psycopg2-binary = "^2.9.6"
alembic = "^1.11.1"
sqlalchemy = "^2.0.15"
sqlalchemy-mixins = "^2.0.0"
SQLAlchemy-Utils = "^0.41.1"

# Data Science
numpy = "^1.24.3"
pandas = "^2.0.1"
tiktoken = "^0.4.0"
langchain = "^0.0.183"
openai = "^0.27.7"

# Payment
stripe = "^5.4.0"

# Telegram
python-telegram-bot = "^20.3"

# Testing
pytest = "^7.3.1"

# New

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
